syntax = "proto3";

package auth_v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/satanaroom/auth;auth_v1";

service AuthV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

enum Role {
  ROLE_UNKNOWN = 0;
  ROLE_ADMIN = 1;
  ROLE_USER = 2;
}

message UserInfo {
  string username = 1;
  string email = 2;
  string password = 3;
  Role role = 4;
}

message CreateRequest {
  UserInfo info = 1;
  string password_confirm = 2;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  string username = 1;
}

message GetResponse {
  UserInfo info = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
}

message UpdateRequest {
  string username = 1;
  UserInfo info = 2;
}

message UpdateResponse {
  int64 id = 1;
}

message DeleteRequest {
  string username = 1;
}

message DeleteResponse {
  int64 id = 1;
}

